# rmk-keyboards-nrfmicro

./: .envrc  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Justfile  Makefile.toml  build.rs  keyboard.toml  keyboard_corne.toml  keyboard_corne_reset.toml  keyboard_cornix.toml  keyboard_keyball61.toml  memory.x  shell.nix  vial.json  vial_cornix.json  vial_velvet.json
.cargo/: config.toml
.github/workflows/: build.yml
backup/: keyboard_velvet.toml  vial_cornix.json
src/: central.rs  key_position.rs  keymap.rs  keymap42.rs  keymap_corne.rs  lib.rs  macros.rs  matrix_map.rs  peripheral.rs
