[package]
name = "keyboard-corne"
version = "0.1.0"
authors = ["hitsmaxft <hitsmaxft@gmail.com>"]
description = "Keyboard firmware written in Rust"
homepage = "https://github.com/haobogu/rmk"
repository = "https://github.com/haobogu/rmk"
readme = "README.md"
edition = "2024"
license = "MIT OR Apache-2.0"

[features]
default = []
nrf = [
    "rmk/nrf52840_ble",
    "rmk/vial",
    "rmk/split",
    "rmk/async_matrix",
    "rmk/adafruit_bl",
    "dep:nrf-sdc",
    "dep:nrf-mpsl",
    "dep:bt-hci",
    "dep:cortex-m",
    "dep:cortex-m-rt",
    "dep:embassy-time",
    "dep:embassy-nrf",
    "dep:embassy-executor",
    "dep:defmt",
    "dep:defmt-rtt",
    "dep:panic-probe",
    "dep:static_cell"
]

std = [
    "rmk/std",
    "embassy-executor/arch-std",
    "embassy-executor/executor-thread",
    "embassy-time/std",
]

[dependencies]
# rmk dependency (available for both nRF and std, but with different features)
rmk = { version = "0.8", default-features = false }

# nRF-specific dependencies (only included when nrf feature is enabled)
nrf-sdc = { git = "https://github.com/alexmoon/nrf-sdc", rev = "11d5c3c", features = [
    "defmt",
    "peripheral",
    "central",
    "nrf52840",
], optional = true }
nrf-mpsl = { git = "https://github.com/alexmoon/nrf-sdc", rev = "11d5c3c", features = [
    "defmt",
    "critical-section-impl",
    "nrf52840",
], optional = true }
bt-hci = { version = "0.6", features = ["defmt"], optional = true }

cortex-m = { version = "0.7.7", optional = true }
cortex-m-rt = { version = "0.7.5", optional = true }
embassy-time = { version = "0.5", features = ["tick-hz-32_768", "defmt", "defmt-timestamp-uptime"], optional = true }
embassy-nrf = { version = "0.8", features = [
    "defmt",
    "nrf52840",
    "time-driver-rtc1",
    "gpiote",
    "unstable-pac",
    "nfc-pins-as-gpio",
    "time",
], optional = true }
embassy-executor = { version = "0.9", features = [
    "defmt",
    "arch-cortex-m",
    "executor-thread",
], optional = true }
defmt = { version = "1.0", optional = true }
defmt-rtt = { version = "1.0", optional = true }
panic-probe = { version = "1.0", features = ["print-defmt"], optional = true }
static_cell = { version = "2", optional = true }

# Common dependencies available for both nrf and std builds
rand = { version = "0.8.4", default-features = false }
rand_core = { version = "0.6" }
rand_chacha = { version = "0.3", default-features = false }
paste = "1.0.15"


[build-dependencies]
xz2 = "0.1.7"
json = "0.12"
const-gen = "1.6"



[profile.dev]
codegen-units = 1      # better optimizations
debug = true
opt-level = 1
overflow-checks = true
lto = false
panic = 'unwind'

[profile.release]
codegen-units = 1       # better optimizations
debug = true            # no overhead for bare-metal
opt-level = "z"         # optimize for binary size
overflow-checks = false
lto = "fat"


[[bin]]
name = "central"
path = "src/central.rs"
[[bin]]
name = "peripheral"
path = "src/peripheral.rs"

[[bin]]
name = "central_config"
path = "src/central_config.rs"
[[bin]]
name = "peripheral_config"
path = "src/peripheral_config.rs"
